--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
         <title>Handlebars AMD</title>
     </head>
     <body>
-        <script src = 'js/require.js' type='text/javascript' data-main='js/main'></script>
+        <script src = 'js/require.js' type='text/javascript' data-main='js/production'></script>
     </body>
 </html>
